@@ -6387,6 +6387,33 @@ XS(XS_Mob_ProjectileAnim)
 	XSRETURN_EMPTY;
 }
 
+XS(XS_Mob_BoolNPCSpecAtks); /* prototype to pass -Wmissing-prototypes */
+XS(XS_Mob_BoolNPCSpecAtks)
+{
+	dXSARGS;
+	if (items != 2)
+		Perl_croak(aTHX_ "Usage: Mob::BoolNPCSpecAtks(THIS, parse)");
+	{
+		Mob *		THIS;
+		char*		parse = (char *)SvPV_nolen(ST(1));
+		bool		RETVAL;
+
+		if (sv_derived_from(ST(0), "Mob")) {
+			IV tmp = SvIV((SV*)SvRV(ST(0)));
+			THIS = INT2PTR(Mob *,tmp);
+		}
+		else
+			Perl_croak(aTHX_ "THIS is not of type Mob");
+		if(THIS == NULL)
+			Perl_croak(aTHX_ "THIS is NULL, avoiding crash.");
+
+		RETVAL = THIS->BoolNPCSpecAtks(parse);
+		ST(0) = boolSV(RETVAL);
+		sv_2mortal(ST(0));
+	}
+	XSRETURN(1);
+}
+
 #ifdef __cplusplus
 extern "C"
 #endif
@@ -6631,6 +6658,7 @@ XS(boot_Mob)
 		newXSproto(strcpy(buf, "CheckLoSToLoc"), XS_Mob_CheckLoSToLoc, file, "$$$$;$");
 		newXSproto(strcpy(buf, "FindGroundZ"), XS_Mob_FindGroundZ, file, "$$$;$");
 		newXSproto(strcpy(buf, "ProjectileAnim"), XS_Mob_ProjectileAnim, file, "$$$;$$$$$");
+		newXSproto(strcpy(buf, "BoolNPCSpecAtks"), XS_Mob_BoolNPCSpecAtks, file, "$$");
 	XSRETURN_YES;
 }
 
